# animcr

./: .gitignore  README.md  pyproject.toml
animcr/: assetmanager.py
animcr/assets/: cr_example.fits
animcr/common/: __init__.py  grid.py
animcr/scenes/median_filter/: scene.py
