[tool.poetry]
name = "animcr"
version = "0.1.0"
description = "Animations for demonstrating various cosmic-ray removal methods."
authors = ["Benjamin van de Vorstenbosch <bencvdv@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
manim = "^0.18.1"
astropy = "^6.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
